--- a/index.html
+++ b/index.html
@@ -68,26 +68,10 @@
                     <a href="javascript:;" class="langbot"></a>
                 </ul>
                 <section class="single-item">
-                    <a href="#">
-                        <div class="banimg1">
-                            <div class="banlogo"></div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="banimg1">
-                            <div class="banlogo"></div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="banimg1">
-                            <div class="banlogo"></div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="banimg1">
-                            <div class="banlogo"></div>
-                        </div>
-                    </a>
+                    <a href="#"><div class="banimg"></div></a>
+                    <a href="#"><div class="banimg"></div></a>
+                    <a href="#"><div class="banimg"></div></a>
+                    <a href="#"><div class="banimg"></div></a>
                 </section>
                 <div class="banbot1"></div>
                 <div class="banbot2"></div>
