--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </article>
         <div class="mq">
             <article>
-                <marquee class="style" behavior="scroll" direction="left"><a></a>公告公告公告</marquee>
+                <marquee class="style" scrollamount="1"><a></a>公告公告公告</marquee>
             </article>
         </div>
     </header>
